# snippet of code @ 2023-09-03 09:40:20

# === Rust Playground ===
# This snippet is in: ~/.emacs.d/rust-playground/at-2023-09-03-094020/

# Execute the snippet: C-c C-c
# Delete the snippet completely: C-c k
# Toggle between main.rs and Cargo.toml: C-c b

[package]
name = "foo"
version = "0.1.0"
authors = ["Rust Example <rust-snippet@example.com>"]
edition = "2018"

[dependencies]
byteorder = "1.4.3"
opencv = "0.84.5"
