# snippet of code @ 2023-07-10 17:25:51

# === Rust Playground ===
# This snippet is in: ~/.emacs.d/rust-playground/at-2023-07-10-172551/

# Execute the snippet: C-c C-c
# Delete the snippet completely: C-c k
# Toggle between main.rs and Cargo.toml: C-c b

[package]
name = "foo"
version = "0.1.0"
authors = ["Rust Example <rust-snippet@example.com>"]
edition = "2018"

[dependencies]
byteorder = "1.4.3"
ndarray = "*"
opencv = "0.83.0"
rand = "0.8.5"
